@@ -1,2 +1,3 @@
 gprofLaunchConfiguration.name.0=Gprof
-
+gprofLaunchConfiguration.description=Function Execution Timing
+gprofLaunchConfiguration.information=Note: requires compilation of at least one source file using the \"-pg\" option.
