@@ -16,19 +16,30 @@ import java.util.Map.Entry;
 
 import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.IExecutableExtension;
+import org.eclipse.core.runtime.IExtensionPoint;
+import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.preferences.ConfigurationScope;
 import org.eclipse.jface.preference.FieldEditorPreferencePage;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.preference.RadioGroupFieldEditor;
+import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Control;
 import org.eclipse.ui.IWorkbench;
 import org.eclipse.ui.IWorkbenchPreferencePage;
 import org.eclipse.ui.preferences.ScopedPreferenceStore;
+import org.eclipse.linuxtools.internal.profiling.launch.ProfileLaunchPlugin;
 import org.eclipse.linuxtools.internal.profiling.provider.launch.Messages;
 import org.eclipse.linuxtools.profiling.launch.ProfileLaunchConfigurationTabGroup;
 import org.eclipse.linuxtools.profiling.launch.ProfileLaunchShortcut;
 
 public class AbstractProviderPreferencesPage extends
 		FieldEditorPreferencePage implements IWorkbenchPreferencePage, IExecutableExtension {
+
+	// Launch provider extension point tool information attribute
+	private static final String PROVIDER_ATT_INFO = "information";
+
+	// Launch provider extension point tool description attribute
+	private static final String PROVIDER_ATT_DESC = "description";
 
 	// Profiling type
 	private String type;
@@ -54,7 +65,6 @@ public class AbstractProviderPreferencesPage extends
 			final IPreferenceStore store = new ScopedPreferenceStore(
 					ConfigurationScope.INSTANCE, type);
 			setPreferenceStore(store);
-
 	}
 
 	public void initializeDefaultPreferences() {
@@ -80,17 +90,43 @@ public class AbstractProviderPreferencesPage extends
 		String[][] providerList = new String[map.size()][2];
 		int i = 0;
 		for (Entry<String, String> entry : map.entrySet()) {
-			providerList[i][0] = entry.getKey();
-			providerList[i][1] = entry.getValue();
+			String toolId = entry.getValue();
+			String toolDescription = getToolInformationFromId(toolId, PROVIDER_ATT_DESC);
+			String toolName = entry.getKey();
+
+			// Append tool description to tool name if available.
+			if (toolDescription != null && !toolDescription.equals("")) {
+				toolName = toolName + " " + "[" + toolDescription + "]"; //$NON-NLS-1$
+			}
+
+			providerList[i][0] = toolName;
+			providerList[i][1] = toolId;
 			i++;
 		}
+
+		// Create basic field editor.
 		RadioGroupFieldEditor editor = new RadioGroupFieldEditor(
 				ProviderProfileConstants.PREFS_KEY,
 				Messages.ProviderPreferencesPage_1, 1, providerList,
-				getFieldEditorParent());
+				getFieldEditorParent(), true);
 		editor.setPreferenceStore(getPreferenceStore());
 		addField(editor);
 
+		Composite radioBoxControl = editor
+				.getRadioBoxControl(getFieldEditorParent());
+		Control[] providerOptions = radioBoxControl.getChildren();
+
+		// Set tool tip text on field editors.
+		for (Control control : providerOptions) {
+			// Get tool specific information from provider id.
+			String curProviderId = (String) control.getData();
+			// Set tool tip description text.
+			String toolDescription = getToolInformationFromId(curProviderId,
+					PROVIDER_ATT_INFO);
+			if (toolDescription != null && !toolDescription.equals("")) {
+				control.setToolTipText(toolDescription);
+			}
+		}
 	}
 
 	/**
@@ -100,5 +136,31 @@ public class AbstractProviderPreferencesPage extends
 	 */
 	private void setProfilingType(String profilingType) {
 		type = profilingType;
+	}
+
+	/**
+	 * Get content of attribute <code>attribute</code> from the launch provider
+	 * with id <code>toolId</code>.
+	 * 
+	 * @param toolId String unique id of the tool.
+	 * @return String description of tool.
+	 */
+	private static String getToolInformationFromId(String toolId,
+			String attribute) {
+		IExtensionPoint extPoint = Platform.getExtensionRegistry()
+				.getExtensionPoint(ProfileLaunchPlugin.PLUGIN_ID,
+						"launchProvider"); //$NON-NLS-1$
+		IConfigurationElement[] configs = extPoint.getConfigurationElements();
+		for (IConfigurationElement config : configs) {
+			if (config.getName().equals("provider")) { //$NON-NLS-1$
+				String currentId = config.getAttribute("id"); //$NON-NLS-1$
+				String currentToolDescription = config.getAttribute(attribute); //$NON-NLS-1$
+				if (currentId != null && currentToolDescription != null
+						&& currentId.equals(toolId)) {
+					return currentToolDescription;
+				}
+			}
+		}
+		return null;
 	}
 }
