@@ -1,4 +1,6 @@
 #Properties file for org.eclipse.linuxtools.valgrind.cachegrind
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Cachegrind Plug-in
-cachegrindLaunchConfiguration.name.0=Cache Usage [Valgrind]
+cachegrindLaunchConfiguration.name.0=Cachegrind
+cachegrindLaunchConfiguration.description.0=Cache Usage
+cachegrindLaunchConfiguration.information.0 = Note: uses Valgrind as a back-end tool.
