@@ -21,7 +21,9 @@
          point="org.eclipse.linuxtools.profiling.launch.launchProvider">
       <provider
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%cachegrindLaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.cachegrind"
+            information="%cachegrindLaunchConfiguration.information.0"
             name="%cachegrindLaunchConfiguration.name.0"
             priority="2"
             shortcut="org.eclipse.linuxtools.internal.valgrind.cachegrind.CachegrindLaunchShortcut"
