@@ -31,7 +31,9 @@
          point="org.eclipse.linuxtools.profiling.launch.launchProvider">
       <provider
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%massifLaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.massif"
+            information="%massifLaunchConfiguration.information.0"
             name="%massifLaunchConfiguration.name.0"
             priority="2"
             shortcut="org.eclipse.linuxtools.internal.valgrind.massif.MassifLaunchShortcut"
