@@ -1,4 +1,6 @@
 #Properties file for org.eclipse.linuxtools.valgrind.memcheck
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Memcheck Plug-in
-memcheckLaunchConfiguration.name.0 = Memory Checking [Valgrind]
+memcheckLaunchConfiguration.name.0 = Memcheck
+memcheckLaunchConfiguration.description.0 = Memory Checking
+memcheckLaunchConfiguration.information.0 = Note: uses Valgrind as a back-end tool.
